--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lovelys Estudio | Elite Modeling & Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:wght@200;300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --gold: #D2B48C;
-            --black: #000000;
-            --sand: #F5F5DC;
+            --gold: #C5A059;
+            --black: #050505;
+            --dark-gray: #111111;
         }
         body {
             font-family: 'Montserrat', sans-serif;
-            scroll-behavior: smooth;
             background-color: var(--black);
             color: #ffffff;
             overflow-x: hidden;
+            scroll-behavior: smooth;
         }
         h1, h2, h3, h4, .font-serif {
             font-family: 'Playfair Display', serif;
@@ -32,11 +32,9 @@
         .gold-border {
             border-color: var(--gold);
         }
-        .editorial-gradient {
-            background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 100%);
-        }
+        /* Estilo Editorial Scrollbar */
         ::-webkit-scrollbar {
-            width: 4px;
+            width: 3px;
         }
         ::-webkit-scrollbar-track {
             background: #000;
@@ -44,27 +42,18 @@
         ::-webkit-scrollbar-thumb {
             background: var(--gold);
         }
-        .btn-luxe {
-            position: relative;
-            overflow: hidden;
-            transition: all 0.5s ease;
+        /* Animaciones de entrada */
+        .reveal {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 1s ease-out;
         }
-        .btn-luxe::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 0%;
-            background-color: var(--gold);
-            z-index: -1;
-            transition: all 0.4s ease;
+        .reveal.active {
+            opacity: 1;
+            transform: translateY(0);
         }
-        .btn-luxe:hover::after {
-            height: 100%;
-        }
-        .btn-luxe:hover {
-            color: #000;
+        .editorial-shadow {
+            box-shadow: 0 20px 50px rgba(0,0,0,0.5);
         }
     </style>
 <script type="importmap">
@@ -79,5 +68,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- Script de entrada principal indispensable para evitar pantalla negra -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
