--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,6 +11,7 @@
             --gold: #C5A059;
             --black: #050505;
             --dark-gray: #111111;
+            --whatsapp: #25D366;
         }
         body {
             font-family: 'Montserrat', sans-serif;
@@ -32,9 +32,30 @@
         .gold-border {
             border-color: var(--gold);
         }
-        /* Estilo Editorial Scrollbar */
+        
+        /* Animación de Pulso para Tooltip */
+        @keyframes pulse-gold {
+            0% { transform: scale(1); opacity: 0.9; }
+            50% { transform: scale(1.05); opacity: 1; }
+            100% { transform: scale(1); opacity: 0.9; }
+        }
+        .animate-pulse-slow {
+            animation: pulse-gold 2s infinite ease-in-out;
+        }
+
+        /* Resplandor WhatsApp */
+        .whatsapp-glow {
+            box-shadow: 0 0 20px rgba(37, 211, 102, 0.4);
+            transition: all 0.5s ease;
+        }
+        .whatsapp-glow:hover {
+            box-shadow: 0 0 30px rgba(37, 211, 102, 0.7);
+            transform: scale(1.1);
+        }
+
+        /* Scrollbar Editorial */
         ::-webkit-scrollbar {
-            width: 3px;
+            width: 4px;
         }
         ::-webkit-scrollbar-track {
             background: #000;
@@ -42,18 +63,14 @@
         ::-webkit-scrollbar-thumb {
             background: var(--gold);
         }
-        /* Animaciones de entrada */
-        .reveal {
-            opacity: 0;
-            transform: translateY(30px);
-            transition: all 1s ease-out;
+
+        /* Revelación suave */
+        .reveal-up {
+            animation: revealUp 1.2s cubic-bezier(0.16, 1, 0.3, 1) forwards;
         }
-        .reveal.active {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .editorial-shadow {
-            box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+        @keyframes revealUp {
+            from { opacity: 0; transform: translateY(40px); }
+            to { opacity: 1; transform: translateY(0); }
         }
     </style>
 <script type="importmap">
@@ -68,7 +85,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- Script de entrada principal indispensable para evitar pantalla negra -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
